--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
-title: Sen Li's Homepage
-page-top-title: Sen Li
-top-section-bg-text: Computer Science
-home-subtitle: Sen Li&ensp;|&ensp;李森
-copyright-text: '&copy; Sen Li 2023-2025. All Rights Reserved.'
+title: Xingchi Wu's Homepage
+page-top-title: Xingchi Wu
+top-section-bg-text: Sustainable Pavement Materials
+home-subtitle: Xingchi Wu;吴兴驰
+copyright-text: '&copy; Xingchi Wu 2023-2025. All Rights Reserved.'
